update the main page

--- a/index.html
+++ b/index.html
@@ -2,73 +2,55 @@
 layout: homepage
 ---
 
- <div class="splash pure-u-1 content-ribbon">
-        <aside>
+ <div class="splash content-ribbon">
+    <div class="pure-g-r"> 
+        <div class="l-box splash-image">
+            <img src="img/love_apis.png">
+        </div>  
+
+
+        <div class="l-box splash-text">
+            <h1 class="splash-head">
+                Be connected.
+            </h1>
+
+            <h2 class="splash-subhead">
+                Use our API to easily manage your business, enhance your productivity throughout the day and create seamless integrations.
+            </h2>
+
             <p>
-                This documentation is under construction! All the content may change.
+                <a href="/docs/1.0/overview" class="pure-button primary-button">Get Started</a>
             </p>
-        </aside>
-        <div class="pure-g-r">
-            <div class="pure-u-1-3">
-                <div class="l-box splash-image">
-                    <img src="http://placehold.it/650x550&text=MyERP"
-                         alt="Placeholder image for example.">
-                </div>
-            </div>
+        </div> 
+    </div>
+</div>
 
-            <div class="pure-u-2-3">
-                <div class="l-box splash-text">
-                    <h1 class="splash-head">
-                        Be connected.
-                    </h1>
 
-                    <h2 class="splash-subhead">
-                        MyERP allows you to Donec suscipit, risus vel venenatis ornare, nibh massa ultrices diam, a elementum metus felis sit amet eros. Phasellus pellentesque euismod massa sed pellentesque. Donec suscipit, risus vel venenatis ornare, nibh massa ultrices diam.
-                    </h2>
-
-                    <p>
-                        <a href="#" class="pure-button primary-button">Get Started</a>
-                    </p>
-                </div>
-            </div>
+<div class="pure-g-r content-ribbon">
+    <div class="pure-u-1-3">
+        <div class="l-box">
+            <h3>Get your API key</h3>
+            <p>
+                You need an API key to start using the myERP API. Click here to learn how to retrieve it from your Settings Panel. <a href="#" title="">Learn more...</a>
+            </p>
         </div>
     </div>
 
-
-    <div class="pure-g-r content-ribbon">
-        <div class="pure-u-1-4">
-            <div class="l-box">
-                <h3>Customers &amp; Leads</h3>
-                <p>
-                    Donec suscipit, risus vel venenatis ornare, nibh massa ultrices diam, a elementum metus felis sit amet eros. Phasellus. <a href="#" title="">Learn more...</a>
-                </p>
-            </div>
-        </div>
-
-        <div class="pure-u-1-4">
-            <div class="l-box">
-                <h3>Products &amp; Services</h3>
-                <p>
-                    Donec suscipit, risus vel venenatis ornare, nibh massa ultrices diam, a elementum metus felis sit amet eros. Phasellus. <a href="#" title="">Learn more...</a>
-                </p>
-            </div>
-        </div>
-
-        <div class="pure-u-1-4">
-            <div class="l-box">
-                <h3>Bulk processing</h3>
-                <p>
-                    Donec suscipit, risus vel venenatis ornare, nibh massa ultrices diam, a elementum metus felis sit amet eros. Phasellus. <a href="#" title="">Learn more...</a>
-                </p>
-            </div>
-        </div>
-
-        <div class="pure-u-1-4">
-            <div class="l-box">
-                <h3>Java client</h3>
-                <p>
-                    Donec suscipit, risus vel venenatis ornare, nibh massa ultrices diam, a elementum metus felis sit amet eros. Phasellus. <a href="#" title="">Learn more...</a>
-                </p>
-            </div>
+    <div class="pure-u-1-3">
+        <div class="l-box">
+            <h3>REST API</h3>
+            <p>
+                The REST API provides simple interfaces for most myERP functionality. Check out the list of all the available resources. <a href="/docs/1.0/api" title="">Learn more...</a>
+            </p>
         </div>
     </div>
+
+    <div class="pure-u-1-3">
+        <div class="l-box">
+            <h3>Official clients</h3>
+            <p>
+                myERP makes it easy to use the myERP API in your programming language of choice. We provide you with official myERP libraries. <a href="#" title="">Learn more...</a>
+            </p>
+        </div>
+    </div>
+</div>
