update the link of the get api key box

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: homepage
         <div class="l-box">
             <h3>Get your API key</h3>
             <p>
-                You need an API key to start using the myERP API. Click here to learn how to retrieve it from your Settings Panel. <a href="#" title="">Learn more...</a>
+                You need an API key to start using the myERP API. Click here to learn how to retrieve it from your Settings Panel. <a href="/docs/1.0/overview/security_authentication.html" title="">Learn more...</a>
             </p>
         </div>
     </div>
