update menus and links to redirect to the new api clients page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ layout: homepage
         <div class="l-box">
             <h3>Official clients</h3>
             <p>
-                myERP makes it easy to use the myERP API in your programming language of choice. We provide you with official myERP libraries. <a href="#" title="">Learn more...</a>
+                myERP makes it easy to use the myERP API in your programming language of choice. We provide you with official myERP libraries. <a href="/docs/1.0/libraries/" title="">Learn more...</a>
             </p>
         </div>
     </div>
