fix css glitch on the main page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: "- Home"
 <section id="home">
 
     <div class="jumbotron">
-      <div class="container">
+      <div class="container-fluid">
 
         <div class="splash-image">
             <img src="img/love_apis.png">
@@ -16,7 +16,7 @@ title: "- Home"
       </div>
     </div>
  
-    <div class="container">
+    <div class="container-fluid">
           <div class="row">
             <div class="col-md-4">
                 <div class="box">
