replacing myERP by OneUp

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: "- Home"
             <div class="col-md-4">
                 <div class="box">
                   <h3>Get your API key</h3>
-                  <p>You need an API key to start using the myERP API. Click here to learn how to retrieve it from your Settings Panel.
+                  <p>You need an API key to start using the OneUp API. Click here to learn how to retrieve it from your Settings Panel.
                   </p>
                   <p class="more"><a class="btn btn-primary" href="/docs/1.0/overview/#security" role="button">Learn more »</a></p>
                 </div>
@@ -29,14 +29,14 @@ title: "- Home"
             <div class="col-md-4">
                 <div class="box">
                   <h3>REST API</h3>
-                  <p>The REST API provides simple interfaces for most myERP functionality. Check out the list of all the available resources.</p>
+                  <p>The REST API provides simple interfaces for most OneUp functionality. Check out the list of all the available resources.</p>
                   <p class="more"><a class="btn btn-primary" href="/docs/1.0/api/" role="button">Learn more »</a></p>
                </div>
             </div>
             <div class="col-md-4">
                 <div class="box">
                   <h3>Official clients</h3>
-                  <p>myERP makes it easy to use the myERP API in your programming language of choice. We provide you with official myERP libraries.</p>
+                  <p>OneUp makes it easy to use the OneUp API in your programming language of choice. We provide you with official OneUp libraries.</p>
                   <p class="more"><a class="btn btn-primary" href="/docs/1.0/libraries/" role="button">Learn more »</a></p>
                 </div>
             </div>
