--- a/index.html
+++ b/index.html
@@ -4,42 +4,37 @@ title: "- Getting Started"
 ---
 
 <div class="sidebar" role="navigation">
-  <nav class="sidebar-nav widget nav-responsive-center nav-responsive-text naver">
-    <span class="naver-handle">Navigation</span>
-    <div class="naver-wrapper">
-      <div class="naver-container">
-        <ul>
-          <li class="item-header">Getting Started</li>
-          <a href="#general">
-            <li class="active">General</li>
-          </a>
-          <a href="#security">
-            <li class="active">Security and Authentication</li>
-          </a>
-          <a href="#pagination">
-            <li class="active">Pagination</li>
-          </a>
-          <a href="#ratelimiting">
-            <li class="active">Rate Limiting and limits</li>
-          </a>
-          <a href="#errorcode">
-            <li class="active">Error Code and Responses</li>
-          </a>
-          <a href="#bulkdeletion">
-            <li class="active">Bulk Deletion</li>
-          </a>
-          <a href="#changepolicy">
-            <li class="active">Change Policy</li>
-          </a>
-          <a href="#support">
-            <li class="active">Support</li>
-          </a>  
-          <a href="/docs/1.0/api/">
-            <li class="item-header">REST API</li>    
-          </a>
-        </ul>
-      </div>
-    </div>
+  <nav class="sidebar-nav">
+    <ul>
+      <li class="item-header">Getting Started</li>
+      <a href="#general">
+        <li class="active">General</li>
+      </a>
+      <a href="#security">
+        <li class="active">Security and Authentication</li>
+      </a>
+      <a href="#pagination">
+        <li class="active">Pagination</li>
+      </a>
+      <a href="#ratelimiting">
+        <li class="active">Rate Limiting and limits</li>
+      </a>
+      <a href="#errorcode">
+        <li class="active">Error Code and Responses</li>
+      </a>
+      <a href="#bulkdeletion">
+        <li class="active">Bulk Deletion</li>
+      </a>
+      <a href="#changepolicy">
+        <li class="active">Change Policy</li>
+      </a>
+      <a href="#support">
+        <li class="active">Support</li>
+      </a>  
+      <a href="/docs/1.0/api/">
+        <li class="item-header">REST API</li>    
+      </a>
+    </ul>
   </nav>
 </div>
 <!--Main Content -->
