--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@ title: "- Getting Started"
     <ul>
       <li class="item-header">Getting Started</li>
       <a href="#general">
-        <li class="active">General</li>
+        <li>General</li>
       </a>
       <a href="#security">
-        <li class="active">Security and Authentication</li>
+        <li>Security and Authentication</li>
       </a>
       <a href="#pagination">
-        <li class="active">Pagination</li>
+        <li>Pagination</li>
       </a>
       <a href="#ratelimiting">
-        <li class="active">Rate Limiting and limits</li>
+        <li>Rate Limiting and limits</li>
       </a>
       <a href="#errorcode">
-        <li class="active">Error Code and Responses</li>
+        <li>Error Code and Responses</li>
       </a>
       <a href="#bulkdeletion">
-        <li class="active">Bulk Deletion</li>
+        <li>Bulk Deletion</li>
       </a>
       <a href="#changepolicy">
-        <li class="active">Change Policy</li>
+        <li>Change Policy</li>
       </a>
       <a href="#support">
-        <li class="active">Support</li>
+        <li>Support</li>
       </a>  
       <a href="/docs/1.0/api/">
         <li class="item-header">REST API</li>    
