--- a/index.html
+++ b/index.html
@@ -47,4 +47,5 @@ title: "- Getting Started"
   {% include 1.0/overview/bulkdeletion.html %}
   {% include 1.0/overview/changepolicy.html %}
   {% include 1.0/overview/support.html %}
+  <div style="height:850px"></div>
 </main>
