--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: "- Getting Started"
 ---
 <nav class="bs-docs-sidebar" role="navigation">
   <li class="category">
-    <a  href="/docs/1.0/overview/">Getting Started</a>
+    <a  href="/">Getting Started</a>
     <ul class="nav nav-stacked">
         <li class="active"><a href="#general">General</a>
         </li>
