--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@ title: "- Getting Started"
         </li>
         <li><a href="#pagination">Pagination</a>
         </li>
+        <li><a href="#sorting">Sorting</a>
+        </li>
+        <li><a href="#filter">Filter</a>
+        </li>
         <li><a href="#ratelimiting">Rate Limiting and limits</a>
         </li>
         <li><a href="#errorcode">Error Code and Responses</a>
@@ -33,6 +37,8 @@ title: "- Getting Started"
   {% include 1.0/overview/general.html %}
   {% include 1.0/overview/security.html %}
   {% include 1.0/overview/pagination.html %}
+  {% include 1.0/overview/sorting.html %}
+  {% include 1.0/overview/filter.html %}
   {% include 1.0/overview/ratelimiting.html %}
   {% include 1.0/overview/errorcode.html %}
   {% include 1.0/overview/bulkdeletion.html %}
