--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@ title: "- Getting Started"
                         <li><a href="#exchange">Exchange the Authorization Code</a></li>
                         <li><a href="#refresh">Refresh the Access Token</a></li>
                         <li><a href="#pkce">PKCE Flow</a></li>
+                        <li><a href="#using">Using the Access Token</a></li>
+                        <li><a href="#downloads">Support Downloads for Development</a></li>
                     </ul>
                 </li>
             </ul>
@@ -53,6 +55,8 @@ title: "- Getting Started"
   {% include 1.0/overview/security/oauth2/exchange.html %}
   {% include 1.0/overview/security/oauth2/refresh.html %}
   {% include 1.0/overview/security/oauth2/pkce.html %}
+  {% include 1.0/overview/security/oauth2/using.html %}
+  {% include 1.0/overview/security/oauth2/downloads.html %}
   {% include 1.0/overview/pagination.html %}
   {% include 1.0/overview/ratelimiting.html %}
   {% include 1.0/overview/errorcode.html %}
