adds error page for oauth2

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ title: "- Getting Started"
                         <li><a href="#refresh">Refresh the Access Token</a></li>
                         <li><a href="#pkce">PKCE Flow</a></li>
                         <li><a href="#using">Using the Access Token</a></li>
+                        <li><a href="#errors">Handling Errors</a></li>
                         <li><a href="#downloads">Support Downloads for Development</a></li>
                     </ul>
                 </li>
@@ -56,6 +57,7 @@ title: "- Getting Started"
   {% include 1.0/overview/security/oauth2/refresh.html %}
   {% include 1.0/overview/security/oauth2/pkce.html %}
   {% include 1.0/overview/security/oauth2/using.html %}
+  {% include 1.0/overview/security/oauth2/errors.html %}
   {% include 1.0/overview/security/oauth2/downloads.html %}
   {% include 1.0/overview/pagination.html %}
   {% include 1.0/overview/ratelimiting.html %}
