doc: add the section x-api-authorization + update the domains endpoint

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ title: "- Getting Started"
                         <li><a href="#downloads">Support Downloads for Development</a></li>
                     </ul>
                 </li>
+                <li><a href="#xapi">X-API-Authorization</a></li>
             </ul>
         </li>
         <li><a href="#pagination">Pagination</a>
@@ -63,6 +64,7 @@ title: "- Getting Started"
   {% include 1.0/overview/security/oauth2/errors.html %}
   {% include 1.0/overview/security/oauth2/using.html %}
   {% include 1.0/overview/security/oauth2/downloads.html %}
+  {% include 1.0/overview/security/x-api.html %}
   {% include 1.0/overview/pagination.html %}
   {% include 1.0/overview/sorting.html %}
   {% include 1.0/overview/filter.html %}
